--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -144,5 +144,6 @@
     <string name="Logout_dialog_message">Are you sure you want to Logout?</string>
     <string name="Logout_title">Logout</string>
     <string name="title_activity_appointment_calendar">AppointmentCalendarActivity</string>
+    <string name="title_activity_contact_details">ContactDetailsActivity</string>
 
 </resources>
