--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -158,6 +158,16 @@
     <string name="Logout_dialog_message">Are you sure you want to Logout?</string>
     <string name="Logout_title">Logout</string>
     
+    
+        <!-- PHONE CALL -->
+   <string name="Yes_makeCall"> Yes</string>
+    <string name="No_makeCall"> No</string>
+    <string name="phoneCall_dialog_message">Select The Option</string>
+    <string name="phoneCall_title">Phone Call</string>
+    <string name="sms_title">SMS</string>
+    <string name="cancel">Cancel</string>
+ 
+    
     <!-- CONTACT DETAILS -->
     <string name="Midwife_Name">Name:</string>
     <string name="Midwife_Email">Email:</string>
