--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -159,10 +159,10 @@
     <string name="Logout_title">Logout</string>
     
     
-        <!-- PHONE CALL -->
+        <!-- CONTACT DIALOG BOX -->
    <string name="Yes_makeCall"> Yes</string>
     <string name="No_makeCall"> No</string>
-    <string name="phoneCall_dialog_message">Select The Option</string>
+    <string name="contact_dialog_message">Select The Option</string>
     <string name="phoneCall_title">Phone Call</string>
     <string name="sms_title">SMS</string>
     <string name="cancel">Cancel</string>
