updated logout function in appointment spinner

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
     <string name="app_name">Midwife Organizer</string>
-
 
     <!-- ACTIVITY TITLES -->
     <string name="title_activity_select_time">Select Time</string>
@@ -48,9 +46,9 @@
         <item>Visits</item>
     </string-array>
 
-    <!-- CLINIC OPTIONS SPINNER -->
+    <!-- SERVICE OPTIONS SPINNER -->
     <string-array name="clinic_service_option">
-        <item>Select Clinic Option</item>
+        <item>Select Service Option</item>
         <item>Domino Dublin</item>
         <item>Domino Wicklow</item>
         <item>ETH Dublin</item>
@@ -66,7 +64,7 @@
         <item>Visit 3</item>
     </string-array>
 
-    <!-- CLINICS -->
+    <!-- CLINICS OPTION SPINNER -->
     <string-array name="domino_dublin">
         <item>Select Clinic</item>
         <item>NMH(OPD Location)</item>
@@ -103,6 +101,7 @@
         <item>Week 4</item>
         <item>Week 5</item>
         <item>Week 6</item>
+        <item>Week 7</item>
     </string-array>
     <string-array name="days">
         <item>Select Day</item>
