--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
     <string name="app_name">Midwife Organizer</string>
-
 
     <!-- ACTIVITY TITLES -->
     <string name="title_activity_select_time">Select Time</string>
@@ -157,21 +155,20 @@
     <string name="No"> No</string>
     <string name="Logout_dialog_message">Are you sure you want to Logout?</string>
     <string name="Logout_title">Logout</string>
-    
-    
-        <!-- CONTACT DIALOG BOX -->
-   <string name="Yes_makeCall"> Yes</string>
+
+    <!-- CONTACT DIALOG BOX -->
+    <string name="Yes_makeCall"> Yes</string>
     <string name="No_makeCall"> No</string>
     <string name="contact_dialog_message">Select The Option</string>
     <string name="phoneCall_title">Phone Call</string>
     <string name="sms_title">SMS</string>
     <string name="cancel">Cancel</string>
- 
-    
+
     <!-- CONTACT DETAILS -->
-    <string name="Midwife_Name">Name:</string>
-    <string name="Midwife_Email">Email:</string>
-    <string name="Primary_Number">Primary No. :</string>
-    <string name="Secondary_Number">Secondary No. :</string>
+    <string name="midwife_name">Name:</string>
+    <string name="midwife_email">Email:</string>
+    <string name="primary_number">Primary No. :</string>
+    <string name="secondary_number">Secondary No. :</string>
+    <string name="title_activity_list_view">ListView</string>
 
 </resources>
