--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Midwife Organizer</string>
 
     <!-- ACTIVITY TITLES -->
@@ -154,20 +155,21 @@
     <string name="Yes"> Yes</string>
     <string name="No"> No</string>
     <string name="Logout_dialog_message">Are you sure you want to Logout?</string>
-    <string name="Logout_title">Logout</string>    
-    
-        <!-- CONTACT DIALOG BOX -->
-   <string name="Yes_makeCall"> Yes</string>
+    <string name="Logout_title">Logout</string>
+
+    <!-- CONTACT DIALOG BOX -->
+    <string name="Yes_makeCall"> Yes</string>
     <string name="No_makeCall"> No</string>
     <string name="contact_dialog_message">Select The Option</string>
     <string name="phoneCall_title">Phone Call</string>
     <string name="sms_title">SMS</string>
-    <string name="cancel">Cancel</string> 
-    
+    <string name="cancel">Cancel</string>
+
     <!-- CONTACT DETAILS -->
     <string name="Midwife_Name">Name:</string>
     <string name="Midwife_Email">Email:</string>
     <string name="Primary_Number">Primary No. :</string>
     <string name="Secondary_Number">Secondary No. :</string>
+    <string name="title_activity_today_appointment">TodayAppointmentActivity</string>
 
 </resources>
