--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">Midwife Organizer</string>
 
     <!-- ACTIVITY TITLES -->
@@ -12,9 +13,9 @@
     <string name="title_activity_confirm_appointment">Confirm Appointment</string>
     <string name="title_activity_calendar">Calendar</string>
     <string name="title_activity_appointment_calendar">Appointment Calendar</string>
-	<string name="title_activity_today_appointment">Today Appointment</string>
+    <string name="title_activity_today_appointment">Today Appointment</string>
     <string name="title_activity_contact_details">Contact Details</string>
-	<string name="title_activity_post_natal">Post Natal</string>
+    <string name="title_activity_post_natal">Post Natal</string>
     <string name="title_activity_anti_natal">Anti Natal</string>
 
     <!-- MAIN SCREEN -->
@@ -71,7 +72,7 @@
     <!-- CLINICS OPTION SPINNER -->
     <string-array name="domino_dublin">
         <item>Select Clinic</item>
-        <item>NMH(OPD Location)</item>
+        <item>Evening Booking Clinic</item>
         <item>Leopardstown</item>
         <item>Dun laoghaire</item>
         <item>Churchtown</item>
@@ -178,5 +179,17 @@
     <string name="midwife_email">Email:</string>
     <string name="primary_number">Primary No. :</string>
     <string name="secondary_number">Secondary No. :</string>
+    <string name="title_activity_stock_note">StockNote</string>
     
+    <!-- APPOINTMENT CALENDAR -->
+    <string name="clinic_title">Churchtown:</string>
+    <string name="prev_button">Prev</string>
+    <string name="date_button">30/08/14</string>
+    <string name="next_button">Next</string>
+    
+    
+    <!--  Stock Note -->
+    <string name="clinic_name">Churchtown</string>
+    <string name="save_note">Save note</string>
+
 </resources>
