--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -180,17 +180,17 @@
     <string name="midwife_email">Email:</string>
     <string name="primary_number">Primary No. :</string>
     <string name="secondary_number">Secondary No. :</string>
-        
+
     <!-- APPOINTMENT CALENDAR -->
     <string name="clinic_title">Clinic Name</string>
     <string name="prev_button">Prev</string>
     <string name="date_button">Date</string>
-    <string name="next_button">Next</string>    
-    
-    <!--  Stock Note -->
+    <string name="next_button">Next</string>
+
+    <!-- Stock Note -->
     <string name="clinic_name">Clinic Name</string>
     <string name="save_note">Save note</string>
-    
+
     <!-- POST NATAL -->
     <string name="edd">EDD</string>
     <string name="gestation">Gestation</string>
@@ -198,5 +198,14 @@
     <string name="rhesus">Rhesus</string>
     <string name="parity">Parity</string>
     <string name="obstretic_history">Obstretic history</string>
+    <string name="title_activity_obstretic_history">ObstreticHistory</string>
+    
+    <!-- OBSTRETIC HISTORY -->
+    <string name="patient_name">Sarah MacLachlann-Murphy</string>
+    <string name="history_notebutton">Add note to history</string>
+    <string name="add_note">Add a note...</string>
+    
+    
+    
 
 </resources>
