Changed Obstretic history to obstetric history

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -200,7 +200,7 @@
     <string name="obstretic_history">Obstretic history</string>
     <string name="title_activity_obstretic_history">ObstreticHistory</string>
 
-    <!-- OBSTRETIC HISTORY -->
+    <!-- OBSTETRIC HISTORY -->
     <string name="patient_name">Sarah MacLachlann-Murphy</string>
     <string name="history_notebutton">Add note to history</string>
     <string name="add_note">Add a note...</string>
