--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -192,6 +192,7 @@
     <string name="save_note">Save note</string>
 
     <!-- POST NATAL -->
+    <string name="age">Age</string>
     <string name="edd">EDD</string>
     <string name="gestation">Gestation</string>
     <string name="blood_group">Blood group</string>
