--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="title_activity_post_natal">Post Natal</string>
     <string name="title_activity_anti_natal">Anti Natal</string>
     <string name="title_activity_stock_note">StockNote</string>
+    <string name="title_activity_create_appointment">Create Appointment Activity</string>
 
     <!-- MAIN SCREEN -->
     <string name="main_logo"> main_logo</string>
@@ -180,17 +181,17 @@
     <string name="midwife_email">Email:</string>
     <string name="primary_number">Primary No. :</string>
     <string name="secondary_number">Secondary No. :</string>
-
+        
     <!-- APPOINTMENT CALENDAR -->
     <string name="clinic_title">Clinic Name</string>
     <string name="prev_button">Prev</string>
     <string name="date_button">Date</string>
-    <string name="next_button">Next</string>
-
-    <!-- Stock Note -->
+    <string name="next_button">Next</string>    
+    
+    <!--  Stock Note -->
     <string name="clinic_name">Clinic Name</string>
     <string name="save_note">Save note</string>
-
+    
     <!-- POST NATAL -->
     <string name="age">Age</string>
     <string name="edd">EDD</string>
