--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -181,26 +181,43 @@
     <string name="midwife_email">Email:</string>
     <string name="primary_number">Primary No. :</string>
     <string name="secondary_number">Secondary No. :</string>
-        
+
     <!-- APPOINTMENT CALENDAR -->
     <string name="clinic_title">Clinic Name</string>
     <string name="prev_button">Prev</string>
     <string name="date_button">Date</string>
-    <string name="next_button">Next</string>    
-    
-    <!--  Stock Note -->
+    <string name="next_button">Next</string>
+
+    <!-- Stock Note -->
     <string name="clinic_name">Clinic Name</string>
     <string name="save_note">Save note</string>
-    
-    <!-- POST NATAL -->
-    <string name="age">Age</string>
+
+    <!-- ANTE NATAL -->
     <string name="edd">EDD</string>
+    <string name = "age" >Age</string>
     <string name="gestation">Gestation</string>
     <string name="blood_group">Blood group</string>
     <string name="rhesus">Rhesus</string>
     <string name="parity">Parity</string>
     <string name="obstretic_history">Obstretic history</string>
     <string name="title_activity_obstretic_history">ObstreticHistory</string>
+
+    <!-- POST NATAL -->
+    <string name="mother_info">Mother</string>
+    <string name="birth_mode">Birth Mode</string>
+    <string name="perineum">perineum</string>
+    <string name="anti_d">Anti D</string>
+    <string name="midwives_notes">Midwives Notes</string>
+    <string name="baby_info">Baby</string>
+    <string name="delivery_date">Date of delivery</string>
+    <string name="delivery_time">Time of delivery</string>
+    <string name="days_sinceBirth">Days since birth</string>
+    <string name="sex_of_baby">Sex of baby</string>
+    <string name="birth_weight">Birth Weight(kg)</string>
+    <string name="vit_k">VitK</string>
+    <string name="baby_hearing">Hearing</string>
+    <string name="baby_feeding">Feeding</string>
+    <string name="nbst">NBST</string>
 
     <!-- OBSTRETIC HISTORY -->
     <string name="patient_name">Sarah MacLachlann-Murphy</string>
