--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -194,15 +194,29 @@
     <string name="clinic_name">Clinic Name</string>
     <string name="save_note">Save note</string>
 
+
     <!-- ANTE NATAL -->
+
+    
+    <!-- ANTE NATAL -->
+	<string name="age">Age</string>
+
     <string name="edd">EDD</string>
-    <string name = "age" >Age</string>
+  
     <string name="gestation">Gestation</string>
     <string name="blood_group">Blood group</string>
     <string name="rhesus">Rhesus</string>
     <string name="parity">Parity</string>
     <string name="obstretic_history">Obstretic history</string>
 
+
+
+    <!-- PARITY DETAILS -->
+    <string name="date_of_birth">Date of birth</string>
+    <string name="sex">Sex</string>
+    <string name="weight">Weight</string>
+    <string name="mode_of_birth">Mode of birth</string>
+    
     <!-- POST NATAL -->
     <string name="mother_info">Mother</string>
     <string name="birth_mode">Birth Mode</string>
@@ -220,16 +234,14 @@
     <string name="baby_feeding">Feeding</string>
     <string name="nbst">NBST</string>
 
-    <!-- PARITY DETAILS -->
-    <string name="date_of_birth">Date of birth</string>
-    <string name="sex">Sex</string>
-    <string name="weight">Weight</string>
-    <string name="mode_of_birth">Mode of birth</string>
-
     <!-- OBSTRETIC HISTORY -->
     <string name="patient_name">Sarah MacLachlann-Murphy</string>
     <string name="history_notebutton">Add note to history</string>
     <string name="add_note">Add a note</string>
+
+
+
+
 
  	<!-- CREATE APPOINTMENT -->
     <string-array name="visit_type_list">
