--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -53,16 +53,6 @@
         <item>Visits</item>
     </string-array>
 
-    <!-- SERVICE OPTIONS SPINNER -->
-    <string-array name="clinic_service_option">
-        <item>Select Service Option</item>
-        <item>Domino Dublin</item>
-        <item>Domino Wicklow</item>
-        <item>ETH Dublin</item>
-        <item>ETH Wicklow</item>
-        <item>Satellite</item>
-    </string-array>
-
     <!-- VISIT OPTIONS SPINNER -->
     <string-array name="visit_service_option">
         <item>Select Visit Option</item>
@@ -72,30 +62,6 @@
     </string-array>
 
     <!-- CLINICS OPTION SPINNER -->
-    <string-array name="domino_dublin">
-        <item>Select Clinic</item>
-        <item>Evening Booking Clinic</item>
-        <item>Leopardstown</item> 
-    </string-array>
-    <string-array name="domino_wicklow">
-        <item>Select Clinic</item>
-        <item>Greystones (Monday)</item>
-        <item>Greystones (Tuesday)</item>
-        <item>Kilmacanogue</item>
-        <item>Home Visits</item>
-    </string-array>
-    <string-array name="eth">
-        <item>Select Clinic</item>
-        <item>Ballinteer</item>
-        <item>Dun laoghaire</item>
-    </string-array>
-    <string-array name="satellite">
-        <item>Select Clinic</item>
-        <item>Greystones</item>
-        <item>Arklow</item>
-        <item>Newtownmountkennedy</item>
-        <item>Bray</item>
-    </string-array>
     <string-array name="weeks">
         <item>Select Week</item>
         <item>Week 1</item>
@@ -105,16 +71,6 @@
         <item>Week 5</item>
         <item>Week 6</item>
         <item>Week 7</item>
-    </string-array>
-    <string-array name="days">
-        <item>Select Day</item>
-        <item>Monday</item>
-        <item>Tuesday</item>
-        <item>Wednesday</item>
-        <item>Thursday</item>
-        <item>Friday</item>
-        <item>Saturday</item>
-        <item>Sunday</item>
     </string-array>
 
     <!-- SELECT TIME -->
@@ -134,7 +90,6 @@
     <string name="duration">Duration</string>
     <string name="email_to">Email to:</string>
     <string name="sms_to">SMS to:</string>
-    <string name="confirm_appointment">Confirm Appointment</string>
 
     <!-- SERVICE USERS -->
     <string name="ante_natal">Ante-Natal</string>
@@ -150,7 +105,7 @@
 
     <!-- SERVICE USER SEARCH -->
     <string name="ssr_title">Search by the service user\'s hospital number,
-        					 name and\/or dat of birth (@dd\/mm\/yyyy) \n
+        					 name and/or date of birth (@dd/mm/yyyy) \n
         					 You can combine search terms in one line if you like. \n
         					 Example: Mary Murphy @17/06/1976</string>
     <string name="enter_search">Enter Search Parameters</string>
@@ -237,4 +192,5 @@
         <item>Ante-Natal</item>
         <item>Post-Natal</item>
  	</string-array>
+ 	<string name="confirm_appointment">Confirm Appointment</string>
 </resources>
