--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,7 @@
     <!-- ACTIVITY TITLES -->
     <string name="title_activity_select_time">Select Time</string>
     <string name="title_activity_service_user">Service User</string>
-    <string name="title_activity_db_info">Db Info</string>
+    <string name="title_activity_db_info">DB Info</string>
     <string name="title_activity_http_client">Http Client</string>
     <string name="title_activity_appointment_type_spinner">Appointment Type Spinner</string>
     <string name="title_activity_quick_menu">Quick Menu</string>
@@ -17,10 +17,10 @@
     <string name="title_activity_contact_details">Contact Details</string>
     <string name="title_activity_post_natal">Post Natal</string>
     <string name="title_activity_anti_natal">Ante Natal</string>
-    <string name="title_activity_stock_note">StockNote</string>
-    <string name="title_activity_create_appointment">Create Appointment Activity</string>
-   	<string name="title_activity_parity_details">Parity_details</string>
-    <string name="title_activity_obstretic_history">ObstreticHistory</string>
+    <string name="title_activity_stock_note">Stock Note</string>
+    <string name="title_activity_create_appointment">Create Appointment</string>
+   	<string name="title_activity_parity_details">Parity Details</string>
+    <string name="title_activity_obstretic_history">Obstretic History</string>
 
     <!-- MAIN SCREEN -->
     <string name="main_logo"> main_logo</string>
