--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Midwife Organizer</string>
+    <string name="app_name">SMART</string>
 
     <!-- ACTIVITY TITLES -->
     <string name="title_activity_select_time">Select Time</string>
