--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -105,14 +105,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
-    <!-- SERVICE USER SEARCH -->
-    <string name="ssr_title">Search by the service user\'s hospital number,
-        					 name and/or date of birth (@dd/mm/yyyy)\n
-        					 You can combine search terms in one line if you like.\n
-        					 Example: Mary Murphy @17/06/1976</string>
-	<string name="service_user_search_hint">From the drop down menu below, select the
-	    									type of query you would like to make.</string>	        					 
-    <string name="enter_search">Enter Search Parameters</string>
+    <!-- SERVICE USER SEARCH -->       					 
+    <string name="enter_name">Enter Name Here</string>
+    <string name="enter_hospital_number">Enter Hospital Number Here</string>
+    <string name="enter_dob">Enter DOB Here</string>
     <string name="search_result">Search Results</string>
     <string name="btn_search">Search</string>
 
