--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -94,6 +94,14 @@
     <string name="email_to">Email to:</string>
     <string name="sms_to">SMS to:</string>
 
+    <!-- SERVICE USER SEARCH -->       					 
+    <string name="enter_name">Enter Name Here</string>
+    <string name="enter_hospital_number">Enter Hospital Number Here</string>
+    <string name="enter_dob">Enter DOB Here</string>
+    <string name="search_result">Search Results</string>
+    <string name="btn_search">Search</string>
+	<string name="dob">Date of Birth</string>
+	
     <!-- SERVICE USERS -->
     <string name="ante_natal">Ante-Natal</string>
     <string name="personal">Personal</string>
@@ -104,48 +112,7 @@
     <string name="book_appointment">Book Appointment</string>
     <string name="action_settings">Settings</string>
 
-    <!-- SERVICE USER SEARCH -->       					 
-    <string name="enter_name">Enter Name Here</string>
-    <string name="enter_hospital_number">Enter Hospital Number Here</string>
-    <string name="enter_dob">Enter DOB Here</string>
-    <string name="search_result">Search Results</string>
-    <string name="btn_search">Search</string>
-	<string name="dob">Date of Birth</string>
-	
-    <!-- LOGOUT SESSION -->
-    <string name="Yes">Yes</string>
-    <string name="No">No</string>
-    <string name="Logout_dialog_message">Are you sure you want to Logout?</string>
-    <string name="Logout_title">Logout</string>
-
-    <!-- CONTACT DIALOG BOX -->
-    <string name="Yes_make_call">Yes</string>
-    <string name="No_make_call">No</string>
-    <string name="contact_dialog_message">Select The Option</string>
-    <string name="phone_call">Phone Call</string>
-    <string name="sms">Send SMS</string>
-    <string name="email">Email</string>
-    <string name="user_address_title">Google Maps</string>
-    <string name="user_address_message">Are you sure you want to go to Google Maps?</string>
-    <string name="cancel">Cancel</string>
-
-    <!-- CONTACT DETAILS -->
-    <string name="midwife_name">Name:</string>
-    <string name="midwife_email">Email:</string>
-    <string name="primary_number">Primary No:</string>
-    <string name="secondary_number">Secondary No:</string>
-        
-    <!-- APPOINTMENT CALENDAR -->
-    <string name="clinic_title">Clinic Name</string>
-    <string name="prev_button">Prev</string>
-    <string name="date_button">Date</string>
-    <string name="next_button">Next</string>    
-    
-    <!--  Stock Note -->
-    <string name="clinic_name">Clinic Name</string>
-    <string name="save_note">Save note</string>
-    
-    <!-- ANTE NATAL -->
+	<!-- ANTE NATAL -->
 	<string name="age">Age</string>
     <string name="edd">EDD</string>
     <string name="gestation">Gestation</string>
@@ -182,8 +149,41 @@
     <string name="patient_name">Sarah MacLachlann-Murphy</string>
     <string name="history_notebutton">Add note to history</string>
     <string name="add_note">Add a note</string>
+    
+    <!-- LOGOUT SESSION -->
+    <string name="Yes">Yes</string>
+    <string name="No">No</string>
+    <string name="Logout_dialog_message">Are you sure you want to Logout?</string>
+    <string name="Logout_title">Logout</string>
 
-     	<!-- PATIENT SEARCH OPTIONS -->
+    <!-- CONTACT DIALOG BOX -->
+    <string name="Yes_make_call">Yes</string>
+    <string name="No_make_call">No</string>
+    <string name="contact_dialog_message">Select The Option</string>
+    <string name="phone_call">Phone Call</string>
+    <string name="sms">Send SMS</string>
+    <string name="email">Email</string>
+    <string name="user_address_title">Google Maps</string>
+    <string name="user_address_message">Are you sure you want to go to Google Maps?</string>
+    <string name="cancel">Cancel</string>
+
+    <!-- CONTACT DETAILS -->
+    <string name="midwife_name">Name:</string>
+    <string name="midwife_email">Email:</string>
+    <string name="primary_number">Primary No:</string>
+    <string name="secondary_number">Secondary No:</string>
+        
+    <!-- APPOINTMENT CALENDAR -->
+    <string name="clinic_title">Clinic Name</string>
+    <string name="prev_button">Prev</string>
+    <string name="date_button">Date</string>
+    <string name="next_button">Next</string>    
+    
+    <!--  STOCK NOTE -->
+    <string name="clinic_name">Clinic Name</string>
+    <string name="save_note">Save note</string>
+    
+   	<!-- PATIENT SEARCH OPTIONS -->
     <string-array name="patient_search_options">
         <item>Select Search Option</item>
         <item>Name</item>
