--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -135,14 +135,14 @@
     <string name="add_note">Add a note</string>
     
     <!-- PARITY DETAILS -->
-    <string name="parity_baby_name">Baby Name: </string>
-    <string name="parity_hospital_number">Hospital Number: </string>
-    <string name="parity_dob">Date of Birth: </string>
-    <string name="parity_gender">Sex: </string>
-    <string name="parity_gestation">Gestation: </string>
-    <string name="parity_mode_of_birth">Mode Of Birth: </string>
-    <string name="parity_birth_outcome">Birth Outcome: </string>
-    <string name="parity_weight">Weight (kg): </string>
+    <string name="parity_baby_name">Baby Name</string>
+    <string name="parity_hospital_number">Hospital Number</string>
+    <string name="parity_dob">Date of Birth</string>
+    <string name="parity_gender">Sex</string>
+    <string name="parity_gestation">Gestation</string>
+    <string name="parity_mode_of_birth">Mode Of Birth</string>
+    <string name="parity_birth_outcome">Birth Outcome</string>
+    <string name="parity_weight">Weight (kg)</string>
      
     <!-- LOGOUT SESSION -->
     <string name="Yes">Yes</string>
