--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="title_activity_post_natal">Post Natal</string>
     <string name="title_activity_anti_natal">Ante Natal</string>
     <string name="title_activity_stock_note">Stock Note</string>
-    <string name="title_activity_create_appointment">Create Appointment</string>
+    <string name="title_activity_create_appointment">Confirm Details</string>
    	<string name="title_activity_parity_details">Parity Details</string>
     <string name="title_activity_obstretic_history">Obstretic History</string>
 
