--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="title_activity_http_client">Http Client</string>
     <string name="title_activity_appointment_type_spinner">Appointment Type Spinner</string>
     <string name="title_activity_quick_menu">Quick Menu</string>
-    <string name="title_activity_confirm_appointment">Confirm Appointment</string>
+    <string name="title_activity_confirm_appointment">Confirm Details</string>
     <string name="title_activity_calendar">Calendar</string>
     <string name="title_activity_appointment_calendar">Appointment Calendar</string>
     <string name="title_activity_today_appointment">Today Appointment</string>
@@ -19,7 +19,7 @@
     <string name="title_activity_post_natal">Post Natal</string>
     <string name="title_activity_anti_natal">Ante Natal</string>
     <string name="title_activity_stock_note">Stock Note</string>
-    <string name="title_activity_create_appointment">Confirm Details</string>
+    <string name="title_activity_create_appointment">Create Appointment</string>
    	<string name="title_activity_parity_details">Parity Details</string>
     <string name="title_activity_obstretic_history">Obstretic History</string>
 
