--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="btn_search">Search</string>
 	<string name="dob">Date of Birth</string>
 	<string name="no_user_found">No User Found</string>
+    <string name="please_try_again">Please Try Again</string>
 	<string name="day">Day</string>
 	<string name="month">Month</string>
 	<string name="year">Year</string>
