--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,11 +187,16 @@
     <string-array name="nav_drawer_items">
         <item>Search Patient</item>
         <item>Book Appointment</item>
-        <item>Calendar</item>
+        <item>Start/Stop Clinic</item>
         <item>Today\'s Appointments</item>
         <item>Sync</item>
         <item>Logout</item>
     </string-array>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
+
+    <!-- START/STOP CLINIC -->
+    <string name="start_clinic">Start Clinic</string>
+    <string name="stop_clinic">End Clinic</string>
+    <string name="select_clinic">Select a Clinic from Below</string>
 </resources>
